[gd_scene load_steps=12 format=2]

[ext_resource path="res://dodge assets/art/big-mario-stand.png" type="Texture" id=1]
[ext_resource path="res://dodge assets/art/big-mario-walk-1.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://dodge assets/art/big-mario-walk-2.png" type="Texture" id=4]
[ext_resource path="res://dodge assets/art/little-mario-walk-3.png" type="Texture" id=5]
[ext_resource path="res://dodge assets/art/big-mario-walk-3.png" type="Texture" id=6]
[ext_resource path="res://dodge assets/art/little-mario-walk-1.png" type="Texture" id=7]
[ext_resource path="res://dodge assets/art/little-mario-walk-2.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "small_walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "small_idle",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0772
height = 44.9976

[sub_resource type="CapsuleShape2D" id=3]
radius = 15.5919
height = 20.9559

[node name="Player" type="Area2D"]
position = Vector2( 31.8198, 37.8302 )
script = ExtResource( 3 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "walk"
frame = 2
__meta__ = {
"_edit_group_": true
}

[node name="BigCollision" type="CollisionShape2D" parent="."]
position = Vector2( 1.06066, 0.707108 )
shape = SubResource( 2 )

[node name="SmallCollision" type="CollisionShape2D" parent="."]
position = Vector2( 1.41421, 22.981 )
shape = SubResource( 3 )
disabled = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 3.0
__meta__ = {
"_editor_description_": "When the player is hit, it should start the timer. During this time, the player is invincible, which helps avoid death from an immediate collision right after getting hit the first time.

This should be reset only if the player is big."
}

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="hit" from="." to="." method="_on_Player_hit"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
